updated form elements page #408

--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -14,65 +14,404 @@ permalink: "components/form-elements.html"
 <ul>
  <li>Labels</li>
  <li>Text fields</li>
+ <li>Text areas</li>
  <li>Checkboxes</li>
- <li>Buttons</li>
- <li>Dropdown menus</li>
  <li>Radio buttons</li>
+ <li>Dropdown menus (select)</li>
+ <li>File inputs</li>
 </ul>
 
-<h2>Example:</h2>
-{% include "../../src/_includes/modules/form.html" %}
-
-<h2>Source code:</h2>
-<pre><code class="overflow-auto">{% include "../../src/_includes/modules/form.html" %}</code></pre>
-
-
-<hr>
-
-
-<h2>Sample contact form:</h2>
-{% include "../../src/_includes/modules/form-contact.html" %}
-
-<h2>Source code:</h2>
-<pre><code class="overflow-auto">{% include "../../src/_includes/modules/form-contact.html" %}</code></pre>
-
-<hr>
-
-<h2>Form states and sizes:</h2>
-{% include "../../src/_includes/modules/form-states.html" %}
-
-<h2>Source code:</h2>
-<pre><code class="overflow-auto">{% include "../../src/_includes/modules/form-states.html" %}</code></pre>
-
-<hr />
-
-<h2>Custom file input:</h2>
-{% include "../../src/_includes/modules/form-file-input.html" %}
-
-<h2>Source code:</h2>
-<pre><code class="overflow-auto">{% include "../../src/_includes/modules/form-file-input.html" %}</code></pre>
 
 
 
-<hr />
+<h2 id="Text-field">Text field</h2>
+<p>A text field allows visitors to write or edit text. Text field should always have a label that is assosiated with it.
+</p>
+<p>The label should:</p>
+<ul>
+ <li>Describe the purpose of the text field.</li>
+ <li>Use sentence-style capitalization—only capitalize the first word. </li>
+ <li>Be short and concise.</li>
+ <li>Use nouns or short noun phrases.</li>
+ <li>Inform visitors whether or not the form input is required (represented by an asterisk).</li>
+ <li>Avoid instructional text like "Click to get started".</li>
+</ul>
 
-<h2>Custom radio buttons and checkboxes:</h2>
-{% include "../../src/_includes/modules/form-radios.html" %}
-{% include "../../src/_includes/modules/form-checkboxes.html" %}
+<p>Text field can have optional text container for instructions or error messages.</p>
+
+
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs2" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
+   <div class="card-header" id="heading-example2">
+    <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
+    <div class="card-body p-b-lg">
+
+
+     {% include "../../src/_includes/modules/form-textfield.html" %}
+
+    </div>
+   </div>
+  </div>
 
 
 
-<h2>Source code:</h2>
-<pre><code class="overflow-auto">{% include "../../src/_includes/modules/form-radios.html" %}
-{% include "../../src/_includes/modules/form-checkboxes.html" %}
-     </code></pre>
+  <!--HTML-->
+  <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
+   <div class="card-header" id="heading-html2">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/form-textfield.html" %}</code>
+    </pre>
+    </div>
+   </div>
+  </div>
 
 
-<hr />
+ </div>
+</div>
+<!--END TABS-->
 
 
-<h2>Custom select:</h2>
-{% include "../../src/_includes/modules/form-select.html" %}
+<h2 id="Text-area">Text area</h2>
+<p>A text are allows visitors to write or edit multiple lines of text. Same as text field the text area should always
+ have a label that is assosiated with it.
+</p>
 
-<h2>Source code:</h2>
-<pre><code class="overflow-auto">{% include "../../src/_includes/modules/form-select.html" %}</code></pre>
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs1" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
+   <div class="card-header" id="heading-example1">
+    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
+    <div class="card-body p-b-lg">
+
+     {% include "../../src/_includes/modules/form-textarea.html" %}
+
+    </div>
+   </div>
+  </div>
+
+
+
+  <!--HTML-->
+  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
+   <div class="card-header" id="heading-html1">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/form-textarea.html" %}</code>
+    </pre>
+
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
+
+
+
+
+<h2 id="Checkbox">Checkbox</h2>
+<p>A checkbox allows visitors to select one or more options from a number of choices.</p>
+
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs3" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example3" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example3">
+   <div class="card-header" id="heading-example3">
+    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example3" data-hash="#pane-example3" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example3" class="collapse show" role="tabpanel" aria-labelledby="heading-example3">
+    <div class="card-body p-b">
+
+
+     {% include "../../src/_includes/modules/form-checkbox.html" %}
+
+
+    </div>
+   </div>
+  </div>
+
+
+
+  <!--HTML-->
+  <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
+   <div class="card-header" id="heading-html3">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html3" class="collapse" role="tabpanel" aria-labelledby="heading-html3">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/form-checkbox.html" %}</code>
+   </pre>
+
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
+
+
+
+
+
+
+<h2 id="Radio-button">Radio button</h2>
+<p>A radio button allows visitors to select only one option from a number of choices.</p>
+
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs4" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example4" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example4">
+   <div class="card-header" id="heading-example4">
+    <a data-bs-toggle="collapse" href="#collapse-example4" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example4" data-hash="#pane-example4" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example4" class="collapse show" role="tabpanel" aria-labelledby="heading-example4">
+    <div class="card-body p-b">
+
+
+     {% include "../../src/_includes/modules/form-radio.html" %}
+
+
+    </div>
+   </div>
+  </div>
+
+
+
+  <!--HTML-->
+  <div id="pane-html4" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html4">
+   <div class="card-header" id="heading-html4">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html4" data-hash="#pane-html4" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html4" class="collapse" role="tabpanel" aria-labelledby="heading-html4">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/form-radio.html" %}</code>
+   </pre>
+
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
+
+
+
+
+
+<h2 id="Dropdown-menu" class=" m-b-0">Dropdown menu</h2>
+<p class="subtitle mb-4">Other names: select</p>
+<p>A dropdown menu hides options by default. When interacted with, the dropdown menu displays a list of options visitors
+ may select.</p>
+
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs5" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example5" href="#pane-example5" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html5" href="#pane-html5" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example5" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example5">
+   <div class="card-header" id="heading-example5">
+    <a data-bs-toggle="collapse" href="#collapse-example5" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example5" data-hash="#pane-example5" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example5" class="collapse show" role="tabpanel" aria-labelledby="heading-example5">
+    <div class="card-body p-b">
+
+
+     {% include "../../src/_includes/modules/form-dropdown.html" %}
+
+
+    </div>
+   </div>
+  </div>
+
+
+
+  <!--HTML-->
+  <div id="pane-html5" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html5">
+   <div class="card-header" id="heading-html5">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html5" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html5" data-hash="#pane-html5" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html5" class="collapse" role="tabpanel" aria-labelledby="heading-html5">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/form-dropdown.html" %}</code>
+   </pre>
+
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
+
+
+
+
+
+
+<h2 id="File-input" class=" m-b-0">File input</h2>
+<p>A file input let the user choose one or more files from their device storage. Once chosen, the files can be uploaded
+ to a server using form submission.</p>
+
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs6" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example6" href="#pane-example6" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html6" href="#pane-html6" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example6" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example6">
+   <div class="card-header" id="heading-example6">
+    <a data-bs-toggle="collapse" href="#collapse-example6" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example6" data-hash="#pane-example6" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example6" class="collapse show" role="tabpanel" aria-labelledby="heading-example6">
+    <div class="card-body p-b">
+
+
+     {% include "../../src/_includes/modules/form-file-input.html" %}
+
+
+    </div>
+   </div>
+  </div>
+
+
+
+  <!--HTML-->
+  <div id="pane-html6" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html6">
+   <div class="card-header" id="heading-html6">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html6" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html6" data-hash="#pane-html6" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html6" class="collapse" role="tabpanel" aria-labelledby="heading-html6">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/form-file-input.html" %}</code>
+   </pre>
+
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
