updated text field content in form elements page

--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -37,7 +37,7 @@ permalink: "components/form-elements.html"
  <li>Avoid instructional text like "Click to get started".</li>
 </ul>
 
-<p>Text field can have optional text container for instructions or error messages.</p>
+<p>Additional instructions or error messages can be incorporated below the text field.</p>
 
 
 <!--TABS-->
@@ -97,7 +97,7 @@ permalink: "components/form-elements.html"
 
 
 <h2 id="Text-area">Text area</h2>
-<p>A text are allows visitors to write or edit multiple lines of text. Same as text field the text area should always
+<p>A text area allows visitors to write or edit multiple lines of text. Same as text field the text area should always
  have a label that is assosiated with it.
 </p>
 
