added what's new page  #216

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -2,7 +2,7 @@
 title: Template updates
 landing: Template updates
 layout: page.njk
-permalink: "updates.html"
+permalink: "template-updates.html"
 ---
 
 
@@ -22,7 +22,7 @@ permalink: "updates.html"
   <h1 class="mt-lg-0">Template updates</h1>
   <p class="lead">We are continually improving the California State Web Template. View release features by date for
    items that have been added or updated. </p>
-  <p>If you are new here, you may find our <a href="/getting-started.html">getting started</a> page helpful.</p>
+  <p>If you are new here, you may find our <a href="/get-started.html">get started</a> page helpful.</p>
 
   <h2 id="v6">Release features</h2>
 
