--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -2,7 +2,7 @@
 title: Getting Started with State Web Template
 landing: Get started
 layout: page.njk
-permalink: "getting-started.html"
+permalink: "get-started.html"
 ---
 
 <div class="row">
@@ -21,10 +21,18 @@ permalink: "getting-started.html"
  <div class="col-md-9 p-b-lg">
   <h1 class="mt-lg-0">Get started</h1>
 
+  <p class="lead">The State Web Template makes it easier to build digital services to meet the needs of Californians.
+  </p>
+  <p class="lead">It offers components and templates to help product teams work more efficiently. Each component and
+   template comes with code to make it easy for you to use them in your project.</p>
   <p>If you are new to the California Web State Template please follow instroctions below that will help you started.
   </p>
+  <p class="lead">If youve downloaded an earlier version of the State Template, you may want to see <a
+    href="/whats-new.html">what's new</a>. </p>
+
+
   <p><span class="text-highlight-primary">Note:</span> if you are a returning State Web Template user please check <a
-    href="/updates.html">Template
+    href="/template-updates.html">Template
     Updates page</a> for the latest updates notes and updating to the latest version instructions.</p>
 
 
