--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -5,173 +5,65 @@ layout: page.njk
 permalink: "visual-design/icons.html"
 ---
 
-
-<style type="text/css">
- html {
-  scroll-behavior: smooth;
+<style>
+ .icons {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 0;
+  margin-bottom: 0;
  }
 
- .bshadow0,
- input {
-  box-shadow: inset 0 -2px #e7e7e7;
+ .icons li a {
+  text-decoration: none !important;
  }
 
- .glyph {
-  font-size: 1rem;
-  width: 50%;
-  padding-bottom: 1em;
-  padding-right: 4em;
-  margin-bottom: 1em;
-  float: left;
-  overflow: hidden;
+ hr {
+  opacity: 1;
+  height: 1px !important;
+  border-top: 1px solid #D4D4D7;
+  color: transparent;
+  margin: 0.5rem 0 0.5rem 0;
  }
 
- .talign-right {
-  text-align: right;
- }
-
- .talign-center {
-  text-align: center;
- }
-
- .bgc1 {
-  background: #f1f1f1;
- }
-
- .fgc1 {
-  color: #999;
- }
-
- .fgc0 {
-  color: #000;
- }
-
- p {
-  margin-top: 1em;
-  margin-bottom: 1em;
- }
-
- .mvm {
-  margin-top: .75em;
-  margin-bottom: .75em;
- }
-
- .mtn {
-  margin-top: 0;
- }
-
- .mtl,
- .mal {
-  margin-top: 1.5em;
- }
-
- .mbl,
- .mal {
-  margin-bottom: 1.5em;
- }
-
- .mhmm {
-  margin-left: 1em;
-  margin-right: 1em;
- }
-
- .mls {
-  margin-left: .25em;
- }
-
- .ptl {
-  padding-top: 1.5em;
- }
-
- .pbs,
- .pvs {
-  padding-bottom: .25em;
- }
-
- .pvs,
- .pts {
-  padding-top: .25em;
- }
-
- .unit {
-  float: left;
- }
-
- .unitRight {
-  float: right;
- }
-
- .size1of2 {
-  width: 50%;
- }
-
- .size1of1 {
-  width: 100%;
- }
-
- .clearfix:before,
- .clearfix:after {
-  content: " ";
-  display: table;
- }
-
- .clearfix:after {
-  clear: both;
- }
-
- .hidden-true {
-  display: none;
- }
-
- .textbox0 {
-  width: 3em;
-  background: #f1f1f1;
-  padding: .25em .5em;
-  line-height: 1.5;
-  height: 1.5em;
- }
-
- #testDrive {
-  display: block;
-  padding-top: 24px;
-  line-height: 1.5;
- }
-
- .fs0 {
-  font-size: 1rem;
- }
-
- .fs1 {
+ .icon-reset {
+  position: relative;
+  right: 3.125rem;
+  top: 1px;
   font-size: 1.5rem;
+  background: transparent;
+
  }
 
- .icon-value {
-  font-size: 1rem;
-  margin: 0 !important;
+ .icons-searchbox {
+  width: 80%;
  }
 
- .group-heading {
-  width: 100%;
-  float: left;
-  box-shadow: inset 0 -4px #333333;
- }
-
- @media (max-width: 767px) {
-  .glyph {
-   width: 100%;
+ @media (min-width: 992px) {
+  .icons-searchbox {
+   width: 40%;
   }
  }
 
- #iconSearchForm input {
-  border-radius: 5px;
-  border: 1px solid #046B99 !important;
+ #fontlist {
+  display: flex;
+  flex-wrap: wrap;
  }
 
- #iconSearchForm button {
-  border-radius: 5px;
-  border: 1px solid #046B99 !important;
-  color: #fff;
-  background-color: #046B99;
+ .icons-alpha {
+  flex-basis: 100%;
+ }
+
+ .icon-item {
+  flex-basis: 100%;
+  padding-top: 1rem;
+ }
+
+ @media (min-width: 992px) {
+  .icon-item {
+   flex-basis: 33%;
+   padding-top: 1rem;
+  }
  }
 </style>
 
@@ -185,39 +77,40 @@ permalink: "visual-design/icons.html"
   var inputBox = document.querySelector("#iconSearchForm input");
   var searchInput = inputBox ? inputBox.value.trim().toLowerCase() : "";
 
-  const letterList = [...new Set(iconData.icons.map(x=>x.properties.name.charAt(0)))];
-  const jumpToHtml = `<li><strong>First letter:</strong></li>`
+  const letterList = [...new Set(iconData.icons.map(x => x.properties.name.charAt(0)))];
+  const jumpToHtml = `<li><strong><a href="javascript:buildList()">All</a></strong></li>`
    + letterList
-    .map(l=>`<li><a href="javascript:buildList('${l}')" ${filterLetter===l ? 'style="font-weight:bold"' : ''}>${l.toUpperCase()}</a></li>`)
+    .map(l => `<li><a href="javascript:buildList('${l}')" ${filterLetter === l ? 'style="font-weight:bold; color:#000"' : ''}>${l.toUpperCase()}</a></li>`)
     .join('');
 
   for (const letter of letterList
-   .filter(l=>!filterLetter || l===filterLetter)) {
+   .filter(l => !filterLetter || l === filterLetter)) {
 
-    const iconsByLetter = iconData.icons.filter(l=>l.properties.name.charAt(0)===letter);
+   const iconsByLetter = iconData.icons.filter(l => l.properties.name.charAt(0) === letter);
 
 
-    if (!searchInput.length) {
-      listHtml += `<p class="h1 group-heading py-3">${letter.toUpperCase()}&nbsp;<span style="font-size:large">(${iconsByLetter.length} icons)</span></p>`;
-    }
+   if (!searchInput.length) {
+    listHtml += `<p class="h1 icons-alpha py-3 mb-0 m-t-md color-p2 p-b-0">${letter.toUpperCase()}&nbsp;<span style="font-size:1rem; font-weight:400; color:#000">(${iconsByLetter.length} icons)</span></p>`;
+   }
 
-    for (const icon of iconsByLetter) {
-      const iconStrings = [...new Set([icon.properties.name, ...icon.icon.tags])].filter(x=>x.length);
+   for (const icon of iconsByLetter) {
+    const iconStrings = [...new Set([icon.properties.name, ...icon.icon.tags])].filter(x => x.length);
 
-      if (!searchInput.length || iconStrings.find(x=>x.search(searchInput) > -1)) {
-        listHtml += `
-<div class="glyph fs1">
-  <div class="clearfix bshadow0 pbs">
-    <span class="ca-gov-icon-${icon.properties.name}"></span>
-    <span style="text-transform:capitalize">${icon.properties.name.replace('-',' ')}</span><br/>
-    <span class="mls">ca-gov-icon-${icon.properties.name}</span>
+    if (!searchInput.length || iconStrings.find(x => x.search(searchInput) > -1)) {
+     listHtml += `
+<div class="d-flex icon-item">
+  <div class="text-3rem p-r">
+    <span class="ca-gov-icon-${icon.properties.name}" aria-hidden="true"></span>
   </div>
-  <p class="icon-value">${icon.properties.code.toString(16)}</p>
+  <div class="icon-specs p-r">
+  <p style="text-transform:capitalize" class="bold m-t m-b-0 font-size-16">${icon.properties.name.replace('-', ' ')}</p>
+    <p class="font-size-12 m-0">ca-gov-icon-${icon.properties.name}</p>
+    </div>
 </div>
         `;
-        numberOfResults++;
-      }
+     numberOfResults++;
     }
+   }
   }
 
   if (searchInput.length) {
@@ -227,7 +120,7 @@ permalink: "visual-design/icons.html"
    document.querySelector('#jumpToHeading ol').innerHTML = jumpToHtml;
   }
   document.querySelector('#fontlist').innerHTML = listHtml;
-  document.querySelector('#resultcount').innerHTML = numberOfResults ? `<p>${numberOfResults} icons found.</p>` : '<p>No icons found.</p>';
+  document.querySelector('#resultcount').innerHTML = numberOfResults ? `<p class="m-t">${numberOfResults} icons found.</p>` : '<p>No icons found.</p>';
  }
 
  const myRequest = new Request('https://california.azureedge.net/fonts/selection.json');
@@ -250,48 +143,84 @@ permalink: "visual-design/icons.html"
 
 </script>
 
+<div class="row">
+ <div class="col-md-3">
+  <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
+   <div id="page-navigation-label" class="label h4 m-t">On this page:</div>
+   <ul class="list-navigation">
+    <li><a href="#How-to-use-icons">How to use icons</a></li>
+    <li><a href="#Dos-and-donts-for-icon-use">Do's and don'ts for icon use</a></li>
+    <li><a href="#Search-icons">Search icons</a></li>
+   </ul>
+  </nav>
+ </div>
+ <div class="col-md-9 p-b-lg">
+
+
+  <h1 class="mt-lg-0">Icons</h1>
+  <p class="lead">Icons are visual representations of commands, devices, directories, or common actions.
+  </p>
+  <p>The State Web Template uses CSS classes to customize icon color for compatibility with all popular browsers.</p>
+
+
+  <h2 id="How-to-use-icons">How to use icons</h2>
+  <p>Icon color and font can be styled using the same CSS rules used to style other text on a page. Copy the CSS code to
+   your clipboard or manually type it into your code to use your desired icons</p>
+  <p>Keep in mind, color and font size will change the size of the icon. </p>
+  <p>To use an icon, insert an empty span tag with the corresponding class name. Here's an example:</p>
+  <div class="bg-gray-50 d-flex p-a-md">
+   <span class="ca-gov-icon-info font-size-30 color-p2 d-block" aria-hidden="true"></span>
+   <pre class="m-l-md w-100 m-b-0">&lt;span class="ca-gov-icon-info" aria-hidden="true">&lt;/span></pre>
+  </div>
 
 
 
-<h1 class="mt-lg-0">Icons</h1>
+  <h2 id="Dos-and-donts-for-icon-use" class="m-b-0">Do's and don'ts for icon use</h2>
+
+  <div class="row">
+   <div class="col-md-6">
+    <h3 class="h5">Do</h3>
+    <ul>
+     <li>Use icons with meaningful text labels</li>
+     <li>Use a single icon for a group of related content</li>
+     <li>Use a single icon per concept</li>
+    </ul>
+   </div>
+   <div class="col-md-6">
+    <h3 class="h5">Don't</h3>
+    <ul>
+     <li>Use icons without labels</li>
+     <li>Use too many icons and create visual clutter</li>
+     <li>Use multiple icon variations to represent the same concept</li>
+    </ul>
+   </div>
+  </div>
 
 
-<p>The CaGov icon font includes over <strong>500 icons</strong> you can use in your site. Four different
- formats of the font
- are included for compatibility with all popular browsers. You may need to add a mime map to your
- webserver for the WOFF font. To determine if your webserver needs it, upload the /fonts/CaGov.woff
- file to your webserver. Try downloading the WOFF in your browser by visiting:
- http://yourwebsite.ca.gov/fonts/CaGov.woff . If it prompts you to download the font, your server is
- configured correctly. If you get a 404 or other error, you'll need to add a mime map for extension
- ".woff", and the mimetype is "application/font-woff". Ask your server admin if you need assistance.
-</p>
-<hr>
-<p>To insert an icon into your page, insert an empty span tag with the class name for the icon you wish
- to use, for example:</p>
-<code>&lt;h2&gt;&lt;span class=&quot;ca-gov-icon-arrow-down&quot;&gt;&lt;/span&gt; Heading&lt;/h2&gt;</code>
-<p>will appear as:</p>
-<h2><span class="ca-gov-icon-arrow-down"></span> Heading</h2>
-<p>When icons are used with H1 to H5 headings and some pre-configured modules, styles for font-size and
- color are included. When used anywhere else you'll need to add styles for the font-size and color
- yourself. Icon fonts can be styled using the same css rules used to style any other text on the
- page. For example <code>color:</code> and <code>font-size:</code> change the color and size of the
- icon.</p>
+  <h2 id="Search-icons">Search icons</h2>
+  <p>Use the search to find a specific icon, or browse icons alphabetically with the menu.</p>
 
-<form id="iconSearchForm" class="" onsubmit="return false">
- <span class="sr-only" id="IconInput">Search icons</span>
- <input type="text" name="iconsearch" aria-labelledby="IconInput" placeholder="Search icons" class="search-textfield">
- <button type="reset" class=""><span class="">Reset</span></button>
-</form>
+  <form id="iconSearchForm" class="m-y-lg" onsubmit="return false">
+   <span class="sr-only" id="IconInput">Search icons</span>
+   <input type="text" name="iconsearch" aria-labelledby="IconInput" placeholder="Search icons"
+    class="search-textfield rounded-50 brd-solid-1 brd-primary p-y-sm p-x icons-searchbox">
+   <button type="reset" title="reset" class="border-0 p-x-sm rounded-50 color-p2 color-primary-hover icon-reset"><span
+     class="ca-gov-icon-close-line" aria-hidden="true"></span><span class="sr-only">Reset</span></button>
+  </form>
 
-<div id="jumpToHeading">
- <hr>
- <ol class="breadcrumb">
- </ol>
- <hr>
-</div>
+  <div id="jumpToHeading">
+   <hr>
+   <ol class="icons">
+   </ol>
+   <hr>
+  </div>
 
-<!-- START ICOMOON DEMO -->
-<div class="clearfix mhl ptl">
- <div id="resultcount" class="fs1" aria-live="polite"></div>
- <div id="fontlist" ></div>
+  <!-- START ICOMOON DEMO -->
+  <div class="clearfix mhl ptl">
+   <div id="resultcount" class="fs1" aria-live="polite"></div>
+   <div id="fontlist"></div>
+  </div>
+
+
+ </div>
 </div>
