--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -6,17 +6,18 @@ permalink: "patterns/card-grid.html"
 ---
 
 
-
 <h1 class="mt-lg-0">Card grid</h1>
-<p>The card grid is grid layout of two or more cards. Card grid is a great way to
- showcase small bits of important information, and are often used in rows to display services or
- features. Image or icon can either appear above the card's text, or to the left of the text. </p>
-
-<hr />
+<p>There are three types of card grids to present related information: </p>
+<ul>
+ <li>Basic card grid</li>
+ <li>News grid</li>
+ <li>Card grid with imagery</li>
+</ul>
 
 <h2 id="Basic">Basic</h2>
 
-
+<p>A basic card grid highlights content in grids. It visually shows content or elements that belong together with a
+ button to indicate a call-to-action.</p>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -76,127 +77,14 @@ permalink: "patterns/card-grid.html"
 
 
 
-<h2 id="With-icons">With icons</h2>
-<!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs2" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
-   <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
-  </li>
-  <li class="nav-item">
-   <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
-  </li>
-
- </ul>
-
-
- <div id="tab-content" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
-   <div class="card-header" id="heading-example2">
-    <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
-     aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
-    <div class="card-body p-b-lg">
-
-
-     {% include "../../src/_includes/modules/card-grid-icons.html" %}
-
-    </div>
-   </div>
-  </div>
-
-
-
-  <!--HTML-->
-  <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
-   <div class="card-header" id="heading-html2">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
-    <div class="card-body">
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-grid-icons.html" %}</code>
-    </pre>
-    </div>
-   </div>
-  </div>
-
-
- </div>
-</div>
-<!--END TABS-->
 
 
 
 
-<h2 id="With-images">With images</h2>
-
-<!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs2" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
-   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
-  </li>
-  <li class="nav-item">
-   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
-  </li>
-
- </ul>
-
-
- <div id="tab-content" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example3" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example3">
-   <div class="card-header" id="heading-example3">
-    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content" aria-expanded="true"
-     aria-controls="collapse-example3" data-hash="#pane-example3" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example3" class="collapse show" role="tabpanel" aria-labelledby="heading-example3">
-    <div class="card-body p-b">
-
-
-     {% include "../../src/_includes/modules/card-grid-images.html" %}
-
-
-    </div>
-   </div>
-  </div>
-
-
-
-  <!--HTML-->
-  <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
-   <div class="card-header" id="heading-html3">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html3" class="collapse" role="tabpanel" aria-labelledby="heading-html3">
-    <div class="card-body">
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-grid-images.html" %}</code>
-   </pre>
-
-    </div>
-   </div>
-  </div>
-
-
- </div>
-</div>
-<!--END TABS-->
-
-
-
-<h2 id="News-block">News block</h2>
+<h2 id="News-grid">News grid</h2>
+<p>The news grid features information relevant to your agency or department. It offers you space to highlight current
+ events, topics or developments. Use this option to link to a news section within your site or a related, official press
+ release. Add an optional date, author and agency name.</p>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -254,3 +142,112 @@ permalink: "patterns/card-grid.html"
  </div>
 </div>
 <!--END TABS-->
+
+
+
+<h2 id="Imagery">Imagery</h2>
+<p>Imagery helps to visually communicate information. Use it to help your visitors understand your content better.</p>
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs2" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
+   <div class="card-header" id="heading-example2">
+    <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
+    <div class="card-body p-b-lg">
+     <h3 class="m-t-0">Graphics</h3>
+     {% include "../../src/_includes/modules/card-grid-icons.html" %}
+
+     <h3>Images</h3>
+     {% include "../../src/_includes/modules/card-grid-images.html" %}
+    </div>
+   </div>
+  </div>
+
+
+
+  <!--HTML-->
+  <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
+   <div class="card-header" id="heading-html2">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code><h3 class="m-t-0">Graphics</h3>
+{% include "../../src/_includes/modules/card-grid-icons.html" %}
+
+<h3>Images</h3>
+{% include "../../src/_includes/modules/card-grid-images.html" %}
+     </code>
+    </pre>
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
+
+
+
+<h2 id="Usage">Usage</h2>
+<h3>When and how to use it </h3>
+<h4>Card grid</h4>
+
+<p>Keep cards simple. Cards are meant to show a taste of the available information. Don’t overload cards with more
+ information than necessary.</p>
+<p>Communicate clearly about a card’s destination. Cards take someone to another experience, so the content should focus
+ on the value a person can find when they get there.</p>
+
+<p>Cards, by definition, should have some form of interaction such as viewing, editing, purchasing, etc. Some actions
+ are exposed in buttons, and others simply occur by clicking the card.</p>
+
+<p>If a card only has an ability to be opened or viewed in more detail, do not include a button. Clicking anywhere on
+ the card should perform that action.</p>
+
+<h4>Imagery</h4>
+<p>Use icons in a manner that is commonly understood. </p>
+
+<h3>
+ How not to use it
+</h3>
+<h4>Card grid</h4>
+<p>Avoid using the word “new” in a card unless the design has a limited timeframe or is actually new and relevant to
+ someone. Avoiding this word also helps to minimize the work required to go back and update card titles when a feature
+ is no longer new.</p>
+
+<h4>Images</h4>
+<p>Don’t use a commonly used icon for a different purpose. </p>
+<p>We use photos and illustrations for visualizing information. We follow these guidelines:</p>
+<ul>
+ <li>Do not use images as unnecessary decoration. Photos and images should be used to support the content.</li>
+ <li>Use an aspect ratio of 3:2 for all images. The exception is if the proportions of the subject of the image have
+  significance. For example, an image of a driver’s license or an image of an application form.</li>
+ <li>Use alt text whenever adding images. Alt text makes websites more accessible and helps with search engine
+  optimization. Read more about writing alt text in <a
+   href="https://accessibility.huit.harvard.edu/describe-content-images"></a>Harvard University's digital accessibility
+  guidelines.</li>
+
+</ul>
+<h2 id="Accessibility">Accessibility</h2>
+{% include "../../src/_includes/modules/accessibility.html" %}
