fixed the icon form, and form elements

--- a/pages/sample/card.html
+++ b/pages/sample/card.html
@@ -1,8 +1,8 @@
 ﻿---
 title: Card
-landing: Components
-layout: components.njk
-permalink: "components/cards.html"
+landing: Patterns
+layout: patterns.njk
+permalink: "patterns/card.html"
 ---
 
 <h1 class="mt-lg-0">Card</h1>
