--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -8,7 +8,7 @@ permalink: "components/form-elements.html"
 <style>
  .blue-arrow {
   position: relative;
-  padding-right: 3.5rem;
+  padding-right: 2.1rem;
  }
 
  .blue-arrow::before {
@@ -16,13 +16,13 @@ permalink: "components/form-elements.html"
   font-family: "CaGov" !important;
   content: "\e669";
   font-size: 0.65rem;
-  bottom: .8rem;
-  right: 0rem;
+  bottom: 0.8rem;
+  right: -1.3rem;
   border-bottom: 2px solid;
   width: 50px;
   text-align: end;
   line-height: 50px;
-  letter-spacing: -6px;
+  letter-spacing: -4px;
   height: 26px;
  }
 </style>
@@ -80,7 +80,7 @@ permalink: "components/form-elements.html"
      <div class="bg-gray-50 p-a">
       <div class="row">
        <div class="col-sm-3">
-        <p class="color-s3 blue-arrow text-right">Label</p>
+        <p class="outline-color blue-arrow text-right">Label</p>
        </div>
        <div class="col-sm-9">{% include "../../src/_includes/modules/form-label.html" %}</div>
       </div>
@@ -149,7 +149,7 @@ permalink: "components/form-elements.html"
      <div class="bg-gray-50 p-a">
       <div class="row">
        <div class="col-sm-3">
-        <p class="mt-4 pt-2 color-s3 blue-arrow text-right">Text field</p>
+        <p class="mt-4 pt-2 outline-color blue-arrow text-right">Text field</p>
        </div>
        <div class="col-sm-9">{% include "../../src/_includes/modules/form-textfield.html" %}</div>
       </div>
