--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -276,7 +276,7 @@ permalink: "visual-design/icons.html"
 
   <!-- START ICOMOON DEMO -->
   <div class="clearfix mhl ptl">
-   <div class="h4 m-t-md m-b-0" aria-live="polite">Showing results for "<span id="searchSummary"></span>"</div>
+   <div class="h4 m-t-md m-b-0">Showing results for "<span id="searchSummary"></span>"</div>
    <div id="resultcount" class="fs1" aria-live="polite"></div>
    <div id="fontlist"></div>
   </div>
