updated components landing page #299

--- a/pages/sample/text-accent.html
+++ b/pages/sample/text-accent.html
@@ -9,15 +9,15 @@ permalink: "css-shortcuts/text-accent.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-units.html" id="color-schemes-list">CSS Style Shortcuts</a>
+    <li><a href="/css-shortcuts/css-units.html" id="color-schemes-list">CSS style shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/shortcuts.html">CSS Classes Shortcuts</a></li>
-      <li><a href="/css-shortcuts/gradient-backgrounds.html">Gradient Backgrounds</a></li>
+      <li><a href="/css-shortcuts/shortcuts.html">CSS classes shortcuts</a></li>
+      <li><a href="/css-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
       <li><a href="/css-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/css-shortcuts/text-accent.html" class="active">Text Accent</a></li>
+      <li><a href="/css-shortcuts/text-accent.html" class="active">Text accent</a></li>
      </ul>
     </li>
-    <li><a href="/components.html">Available Components</a>
+    <li><a href="/components.html">Available components</a>
    </ul>
   </nav>
  </div>
@@ -28,7 +28,7 @@ permalink: "css-shortcuts/text-accent.html"
 
   <div class="row">
    <div class="half">
-    <h1 class="mt-lg-0">Text Accent Colors</h1>
+    <h1 class="mt-lg-0">Text accent colors</h1>
     <p>Convey meaning through color with a handful of emphasis utility classes. Accent colors were
      designed to applied to components like the number counter or charts. It is best to exercise
      restraint when using these classes on general body copy as color contrast may be
