--- a/pages/components.html
+++ b/pages/components.html
@@ -7,15 +7,17 @@ permalink: "components.html"
 
 
 <h1 class="mt-lg-0">Components</h1>
-<p>Components are the reusable building blocks of the California State Template.</p>
-<p>Each component is designed to enhance user experiences, and has been created to work together to create patterns.</p>
-<p>Our components are:</p>
+<p>Components are the reusable building blocks of the California State Template. </p>
+<p>Each component is designed to enhance user experiences, and has been created to work together to create web page
+ patterns.</p>
+<p>Our components were:</p>
 <ul>
  <li>Created with performance and accessibility in mind</li>
- <li>Usable in any framework</li>
+ <li>Designed to be more adaptable </li>
+ <li>Built with user needs in mind</li>
 </ul>
 
-<h2>All components </h2>
+<h2>All components</h2>
 
 <p>Use these components to present information and images.</p>
 
@@ -29,8 +31,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Accordion</h3>
-    <p class="font-size-16 color-black">An accordion is a list of headings that hide or reveal additional content when
-     selected.
+    <p class="font-size-16 color-black">A list of headings that hide or reveal additional content when selected.
     </p>
    </div>
   </a>
@@ -44,7 +45,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Alert</h3>
-    <p class="font-size-16 color-black">An alert keeps users informed of important and sometimes time-sensitive changes.
+    <p class="font-size-16 color-black">Keeps visitors informed of important and sometimes time-sensitive changes.
     </p>
    </div>
   </a>
@@ -58,7 +59,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Blockquote</h3>
-    <p class="font-size-16 color-black">A blockquote emphasizes important speaker quotes or content excerpts.
+    <p class="font-size-16 color-black">Emphasizes important speaker quotes or content excerpts.
     </p>
    </div>
   </a>
@@ -80,7 +81,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Breadcrumb</h3>
-    <p class="font-size-16 color-black">A breadcrumb indicates the current page's location within a navigational
+    <p class="font-size-16 color-black">Indicates the current page's location within a navigational hierarchy.
      hierarchy.</p>
    </div>
   </a>
@@ -95,37 +96,14 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Button</h3>
-    <p class="font-size-16 color-black">A button draws attention to your primary call to action with a large clickable
-     surface.
+    <p class="font-size-16 color-black">Draws attention to your primary call to action with a large clickable surface.
     </p>
    </div>
   </a>
  </div>
 
  <div class="col-md-4 m-t-md">
-  <a href="/components/cards.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Card component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-card.png" alt="Card component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Card</h3>
-    <p class="font-size-16 color-black">A card displays a snippet of information and can link to more details upon
-     interaction.
-    </p>
-   </div>
-  </a>
- </div>
-</div>
-
-
-
-
-<div class="row">
-
- <div class="col-md-4 m-t-md">
-  <a href="/components/countdown.html"
+  <a href="/components/countdown-timer.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Countdown component example">
    <div class="p-a-md d-flex align-content-center">
@@ -133,14 +111,22 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Countdown timer</h3>
-    <p class="font-size-16 color-black">A countdown timer emphasizes an important event by counting toward or away from
-     a fixed point in time.
+    <p class="font-size-16 color-black">Emphasizes an important event by counting toward or away from a fixed point in
+     time.
     </p>
    </div>
   </a>
  </div>
+</div>
+
+
+
+
+<div class="row">
+
+
  <div class="col-md-4 m-t-md">
-  <a href="/components/form.html"
+  <a href="/components/form-elements.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Form styles example">
    <div class="p-a-md d-flex align-content-center">
@@ -148,13 +134,13 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Form elements</h3>
-    <p class="font-size-16 color-black">A form allows visitors to enter and submit information to a server.
+    <p class="font-size-16 color-black">Allows visitors to enter and submit information to a server.
     </p>
    </div>
   </a>
  </div>
  <div class="col-md-4 m-t-md">
-  <a href="/components/horizontal-rules.html"
+  <a href="/components/horizontal-separator.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Horizontal separator component example">
    <div class="p-a-md d-flex align-content-center">
@@ -162,20 +148,10 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Horizontal separator</h3>
-    <p class="font-size-16 color-black">The horizontal separator is a style component that uses a line to separate
-     content into sections.</p>
+    <p class="font-size-16 color-black">A style component that uses a line to separate content into sections.</p>
    </div>
   </a>
  </div>
-
-
-</div>
-
-
-
-
-
-<div class="row">
  <div class="col-md-4 m-t-md">
   <a href="/components/lists.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -185,11 +161,20 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Lists</h3>
-    <p class="font-size-16 color-black">A list is a vertical grouping of related content.
+    <p class="font-size-16 color-black">A vertical grouping of related content.
     </p>
    </div>
   </a>
  </div>
+
+</div>
+
+
+
+
+
+<div class="row">
+
  <div class="col-md-4 m-t-md">
   <a href="/components/modal.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -199,7 +184,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Modal</h3>
-    <p class="font-size-16 color-black">A modal displays content in a temporary window that appears over the page
+    <p class="font-size-16 color-black">Displays content in a temporary window that appears over the page content.
      content
     </p>
    </div>
@@ -215,21 +200,10 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Number counter</h3>
-    <p class="font-size-16 color-black">The number counter adds animation to numbers.</p>
+    <p class="font-size-16 color-black">Adds rolling animation to numbers.</p>
    </div>
   </a>
  </div>
-
-
-
-
-</div>
-
-
-
-
-<div class="row">
-
  <div class="col-md-4 m-t-md">
   <a href="/components/parallax.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -239,52 +213,39 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Parallax</h3>
-    <p class="font-size-16 color-black">The parallax is a visual design component. When scrolling, it allows background
-     and foreground elements to move at different speeds.
+    <p class="font-size-16 color-black">Allows background and foreground elements to move at different speeds.
     </p>
    </div>
   </a>
  </div>
 
 
- <div class="col-md-4 m-t-md">
-  <a href="/components/progress-tracker.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Progress tracker component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-bar.jpg" alt="Progress tracker component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Progress tracker</h3>
-    <p class="font-size-16 color-black">A progress tracker displays the steps and progress through a journey.</p>
-   </div>
-  </a>
- </div>
 
- <div class="col-md-4 m-t-md">
-  <a href="/components/featured-search.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Search bar component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-search.jpg" alt="Search bar component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Search bar</h3>
-    <p class="font-size-16 color-black">The search bar allows visitors to search for specific content using keywords or
-     phrases.
-    </p>
-   </div>
-  </a>
- </div>
 </div>
 
 
 
 
-
 <div class="row">
+
+
+
+
  <div class="col-md-4 m-t-md">
-  <a href="/components/socialsharer.html"
+  <a href="/components/progress-bar.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+   title="Progress bar component example">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-bar.jpg" alt="Progress bar component" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Progress bar</h3>
+    <p class="font-size-16 color-black">Displays the current status of a multi-step task.</p>
+   </div>
+  </a>
+ </div>
+ <div class="col-md-4 m-t-md">
+  <a href="/components/social-media-icons.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Social media icons example">
    <div class="p-a-md d-flex align-content-center">
@@ -292,8 +253,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Social media icons </h3>
-    <p class="font-size-16 color-black">The social media icons component lets you share your agency’s social media pages
-     with visitors.
+    <p class="font-size-16 color-black">Lets you share your agency’s social media pages with visitors.
     </p>
    </div>
   </a>
@@ -307,11 +267,20 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Table</h3>
-    <p class="font-size-16 color-black">A table displays large amounts of data in rows and columns.
+    <p class="font-size-16 color-black">Displays large amounts of data in rows and columns.
     </p>
    </div>
   </a>
  </div>
+</div>
+
+
+
+
+
+<div class="row">
+
+
  <div class="col-md-4 m-t-md">
   <a href="/components/tabs.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -321,8 +290,8 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Tabs</h3>
-    <p class="font-size-16 color-black">Tabs organize related content into panels and enable visitors to navigate
-     between them.</p>
+    <p class="font-size-16 color-black">Organizes related content into panels and enables visitors to navigate between
+     them. </p>
    </div>
   </a>
  </div>
@@ -339,19 +308,9 @@ permalink: "components.html"
 
 
 
-<h3>Additional Bootstrap CSS & Components</h3>
-<p>
- We strongly recommend using the documented State Web Template components and
- patterns
- whenever possible; however, for more CSS classes and options as well as components
- we suggest
- utilizing what is available in Bootstrap first, before developing your own custom
- code.
-</p>
-<p>
- <span class="text-highlight-primary">NOTE:</span> When using custom components and
- content
- modules that are not documented as part of the State Template, migration to future
- versions
- of the State Template may require additional work.
+<h2>CSS style shortcuts</h2>
+<p>Enhance the design and appeal of your web pages with our <a href="/css-shortcuts/css-units.html">CSS style
+  shortcuts</a>. Add CSS units to format
+ page layout,
+ colors, and fonts.
 </p>
