updated pattens content

--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -18,11 +18,25 @@ permalink: "patterns.html"
 
 <div class="row">
  <div class="col-md-4 m-t-md">
+  <a href="/patterns/card.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
+   title="Card examples">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-card.png" alt="Card illustration" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Card</h3>
+    <p class="font-size-16 color-black">A flexible, customizable container for content.
+    </p>
+   </div>
+  </a>
+ </div>
+ <div class="col-md-4 m-t-md">
   <a href="/patterns/card-grid.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
-   title="Blurbs examples">
+   title="Card grid examples">
    <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-blurbs.jpg" alt="Blurbs illustration" class="img-fluid">
+    <img src="/images/components/icon-blurbs.jpg" alt="Card grid illustration" class="img-fluid">
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Card grid</h3>
@@ -45,22 +59,10 @@ permalink: "patterns.html"
    </div>
   </a>
  </div>
+</div>
 
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/progress-tracker.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
-   title="Progress tracker examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-progress.jpg" alt="Progress tracker illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Progress tracker</h3>
-    <p class="font-size-16 color-black">Displays the steps and progress through a journey.</p>
-   </div>
-  </a>
- </div>
 
- <!-- 
+<!-- 
  <div class="col-md-4 m-t-md">
   <a href="/patterns/hero-banner.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -75,7 +77,7 @@ permalink: "patterns.html"
   </a>
  </div> -->
 
- <!-- <div class="col-md-4 m-t-md">
+<!-- <div class="col-md-4 m-t-md">
   <a href="/patterns/feature-card.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="Feature Card examples">
@@ -91,7 +93,7 @@ permalink: "patterns.html"
  </div>
 </div> -->
 
- <!-- <div class="row">
+<!-- <div class="row">
  <div class="col-md-4 m-t-md">
   <a href="/patterns/figure.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
@@ -124,7 +126,7 @@ permalink: "patterns.html"
 
 </div> -->
 
- <!-- <div class="row">
+<!-- <div class="row">
 
  <div class="col-md-4 m-t-md">
   <a href="/patterns/news-article.html"
@@ -159,3 +161,20 @@ permalink: "patterns.html"
 
 
 </div> -->
+
+
+<div class="row">
+ <div class="col-md-4 m-t-md">
+  <a href="/patterns/progress-tracker.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
+   title="Progress tracker examples">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-progress.jpg" alt="Progress tracker illustration" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Progress tracker</h3>
+    <p class="font-size-16 color-black">Displays the steps and progress through a journey.</p>
+   </div>
+  </a>
+ </div>
+</div>
