updated form elements and favicon

--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -29,9 +29,9 @@ permalink: "components/form-elements.html"
 
 
 <h1 class="mt-lg-0">Forms elements</h1>
-<p>A form allows visitors to submit information to a server.</p>
-<p>Common form elements include:</p>
-<ul>
+<p class="lead">A form allows visitors to submit information to a server.</p>
+<p class="lead">Common form elements include:</p>
+<ul class="lead">
  <li>Labels</li>
  <li>Text fields</li>
  <li>Text areas</li>
